@@ -226,6 +226,7 @@ fixed bugs:
   been handled in SCIPgetSolVal(), now the handling has been moved to SCIPsolGetVal()
 - fixed bug in cons_xor.c parsing a constraint
 - fixed wrong assert in feasibility pump stage 3
+- fixed bug in simple rounding heuristic with column generation for variables with strictly positive lower bound
 
 parameters:
 - new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
